# eth_event_listener_test

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: build-test.yml  build_and_test.yml
config/: default.toml  readme.md
src/base/: Cargo.toml  readme.md
src/base/src/: config.rs  error.rs
src/base/src/storage/: model.rs  repository.rs  service.rs
src/base/src/subscriber/: service.rs
src/base/tests/: base_tests.rs
src/base/tests/storage/: service_it.rs
src/base/tests/subscriber/: service_it.rs
src/common/: Cargo.toml  readme.md
src/common/resources/db/pg/migrations/: 00001_create_schema.sql
src/common/src/: config.rs  error.rs  lib.rs  subscriber.rs
src/common/src/storage/: mod.rs  model.rs  repository.rs  service.rs
src/common/src/subscriber/: model.rs  service.rs
src/common/tests/: integration_tests.rs
src/common/tests/storage/: mod.rs  service.rs  service_it.rs
src/common/tests/subscriber/: mod.rs  service.rs  service_it.rs
src/core/: Cargo.toml
src/core/src/: config.rs  lib.rs
src/web/: Cargo.toml  readme.md
src/web/src/: app.rs  main.rs
