[workspace]
members = ["src/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["ufoscout@gmail.com"]
license = "MIT"
homepage = "https://github.com/ufoscout/eth_event_listener_test"
repository = "https://github.com/ufoscout/eth_event_listener_test"

[workspace.dependencies]
alloy = { version = "0.12.1", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
anyhow = "1.0"
foundry-fork-db = "0.12"
revm-primitives = "15.0"
revm = "19.0"
futures-util = "0.3"
thiserror = "2.0"
tokio = "1.42"
serde = "1.0"
serde_json = "1.0"
