[workspace]
members = ["src/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["ufoscout@gmail.com"]
license = "MIT"
homepage = "https://github.com/ufoscout/eth_event_listener_test"
repository = "https://github.com/ufoscout/eth_event_listener_test"

[workspace.dependencies]
alloy = { version = "0.12", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
anyhow = "1.0"
config = "0.15"
c3p0 = { version = "0.72", features = ["sqlx_postgres"] }
env_logger = { version = "0.11", default-features = false }
futures-util = "0.3"
log = "0.4"
rand = "0.9"
thiserror = "2.0"
tokio = "1.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["macros", "migrate", "runtime-tokio", "postgres"] }
strum = { version = "0.27", features = ["derive"] }
