[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
config.workspace = true
futures-util.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true


[dev-dependencies]
env_logger.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }