[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
c3p0.workspace = true
config.workspace = true
futures-util.workspace = true
log.workspace = true
serde.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true


[dev-dependencies]
alloy = {workspace = true, features = ["rand"] }
env_logger.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }