[package]
name = "web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common" }
env_logger.workspace = true
log.workspace = true