[package]
name = "web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
axum.workspace = true
c3p0.workspace = true
base = { path = "../base" }
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
alloy = {workspace = true, features = ["rand"] }
http-body-util.workspace = true
tower.workspace = true